ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration2/input.ts.stderr
error: Expected {, got implements
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration2/input.ts:1:13
  |
1 | interface I implements A {
  |             ^^^^^^^^^^

